fixed animation problems on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -420,7 +420,7 @@ height: 100%;
     width: 60%;
     font-size: 2vh;
     top: 20%; /* Adjust this to position the text vertically */
-  left: 15%; /* Adj
+  left: 15%; 
   }
 
 
